--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mongoose": "^6.4.4",
-    "mongoose-encryption": "^2.1.2"
+    "md5": "^2.3.0",
+    "mongoose": "^6.4.4"
   }
 }
